--- a/readme
+++ b/readme
@@ -7,3 +7,6 @@ git remote add origin https://github.com/ckimmmm/test1.git
 git push -u origin main
 
 afsidkfjmaiowerjqawreg
+
+
+erjgoiajregiowreag
